@@ -6,18 +6,20 @@ BUG: Ticket#650 - Fixed TMysqlMetaData bug about SHOW FULL TABLES (Qiang)
 BUG: Ticket#651 - TUserManager Roles names (from config) should be trimmed (Qiang)
 BUG: Ticket#652 - OFFSET must be specified together with LIMIT for TScaffoldView (Qiang)
 BUG: Ticket#653 - TUrlMapping: ServiceId irgnored in URL-Map (Qiang)
+BUG: Ticket#488 - TActiveCustomValidator Is Bypassing My Callback (Wei)
+BUG: Ticket#620 - PRADO should not take over all of Prototype's Callbacks (Wei)
 BUG: TWizard Sidebar using TDataListItemRenderer has error (Qiang)
 BUG: TOutputCache crashes when a default button is set (Qiang)
 BUG: Fix the bug that <include> tag was ignored in page configurations (Qiang)
 BUG: Ticket#654 - TAssetManager::copyDirectory() do not run closedir on an invalid resource (Knut)
 BUG: Ticket#655 - TAssetManager::publishTarFile() exception for 'assetmanager_tarchecksum_invalid' is not thrown on BSD systems (Knut)
+BUG: Ticket#649 - Wrong error message in THttpCookieCollection::itemAt() (Knut)
 ENH: Ticket#625 - Added @ to represent authenticated users in auth rules (Qiang)
 ENH: Ticket#631 - Make TQueue implement Countable as the other collection classes (Knut)
 ENH: Ticket#634 - Override __toString for TXmlElement and TXmlDocument (Knut)
 ENH: Ticket#639 - Added setters for certain properties of TTheme (Qiang)
 ENH: Ticket#641 - Added support to find out controls of specified class or parent classes (Qiang)
-CHG: Ticket#649 - Wrong error message in THttpCookieCollection::itemAt() (Knut)
-NEW: Ticket#646 - Implement TAPCCache::add() (Knut)
+ENH: Ticket#646 - Implement TAPCCache::add() (Knut)
 
 Version 3.1.0 RC May 14, 2007
 =============================
